--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
+@font-face {
+    font-family: Monster;
+    src: url("../fonts/Melted Monster.ttf");
+}
 body{
     overflow: hidden;
     margin: 0;
+}
+a{
+    text-decoration: none;
 }
 .index{
     width: 1920px;
@@ -11,25 +18,45 @@ body{
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: flex-start;
 }
-.config{
+.content{
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    color: rgb(255, 255, 255);
+    position: absolute;
+    background:rgba(0, 0, 0, 0.3);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    opacity: 0;
+    transition: 0.6s;
+    border-radius: 10rem;
+    font-family: "Red Hat Text";
+}
+.content:hover{
+    opacity: 2;
+}
+.tlicon{
     height: 80px;
     width: 80px;
     position: absolute;
     right: 3%;
-    top: 5px;
-    background-color: white;
-    border-color: white;
-    border-radius: 100%;
-    border-width: 1rem;
-    border-style: solid;
+    top: 3%;
 }
 .title{
-    font-family: 'Red Hat Text';
-    font-size: 4rem;
+    font-family: 'Monster';
+    font-size: 6rem;
 }
 .menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     list-style: none;
+    margin-top: -10px;
 }
 .menu li{
     text-decoration: none;
@@ -38,6 +65,8 @@ body{
     background-color: rgb(0, 0, 255);
     border-radius: 20%;
     margin-bottom: 20px;
+    text-align: center;
+    margin-left: -2.5rem;
 }
 .menu a{
     text-decoration: none;
