--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,16 @@ body{
 a{
     text-decoration: none;
 }
+a:hover{
+    text-decoration: none;
+}
+h1, h2, h3, h4, h5, p{
+    font-family: "Red Hat Text";
+}
+
+/*INDEX*/
 .index{
-    width: 1920px;
+    width: 100%;
     height: 1080px;
     background-image: url("../imgs/bgindex.jpg");
     background-size: cover;
@@ -39,6 +47,7 @@ a{
 }
 .content:hover{
     opacity: 2;
+    text-decoration: none;
 }
 .tlicon{
     height: 80px;
@@ -71,4 +80,29 @@ a{
 .menu a{
     text-decoration: none;
     color: white;
+}
+
+/*Config*/
+.config{
+    background-image: url("../imgs/bgindex.jpg");
+    width: 100%;
+    height: 1080px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.configform{
+    width: 50%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
