--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,39 @@ h1, h2, h3, h4, h5, p{
     font-family: 'Monster';
     font-size: 6rem;
 }
+.width100{
+    width: 100%;
+}
 .subtitle{
     font-family: 'Red Hat Text';
     color: black;
     -webkit-text-stroke: 2px white;
+}
+.form_center{
+    width: 50%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.form_sparound{
+    width: 50%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.logo_s{
+    width: 15%;
+}
+.tlicon{
+    height: 80px;
+    width: 80px;
+    position: absolute;
+    right: 3%;
+    top: 3%;
 }
 /*INDEX*/
 .index{
@@ -61,13 +90,6 @@ h1, h2, h3, h4, h5, p{
     opacity: 2;
     text-decoration: none;
 }
-.tlicon{
-    height: 80px;
-    width: 80px;
-    position: absolute;
-    right: 3%;
-    top: 3%;
-}
 .menu{
     display: flex;
     flex-direction: column;
@@ -80,15 +102,16 @@ h1, h2, h3, h4, h5, p{
     font-family: 'Red Hat Text';
     font-weight: 700;
     padding: 1rem;
-    background-color: rgb(0, 0, 255);
+    background-color: rgb(255, 255, 255);
     border-radius: 20%;
     margin-bottom: 20px;
     text-align: center;
     margin-left: -2.5rem;
+    border: 2px black solid;
 }
 .menu a{
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 /*Config*/
@@ -101,14 +124,7 @@ h1, h2, h3, h4, h5, p{
     justify-content: center;
     align-items: center;
 }
-.configform{
-    width: 50%;
-    height: 90%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
+
 .container{
     display: flex;
     flex-direction: column;
@@ -127,6 +143,7 @@ label{
 /* Pantalla de juego */
 .juego{
     background-image: url("../imgs/bgindex.jpg");
+    background-position-y: 50%;
     width: 100%;
     height: 1080px;
     display: flex;
@@ -186,6 +203,38 @@ label{
 .imgpregunta{
     width: 30%;
     border-radius: 20%;
+}
+/* Crear Pregunta */
+.crear{
+    background-image: url("../imgs/bgindex.jpg");
+    background-position-x: 50%;
+    height: 1080px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+.crear form{
+    width: 100%;
+}
+
+.resptext{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    height: 15%;
+    width: 40%;
+    margin: 0;
+}
+.inputenunciado{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 40%;
 }
 
 /* Creditos */
