--- a/css/style.css
+++ b/css/style.css
@@ -250,3 +250,26 @@ label{
     border-radius: 100%;
     
 }
+
+/* Fin */
+.fin{
+    height: 100%;
+    width: 100%;
+    background-image: url("../imgs/bgindex.jpg");
+    background-position-x: 50%;
+    background-position-y: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.volver{
+    color: black;
+    text-decoration: none;
+    margin-top: 8rem;
+    padding: 1rem;
+    background-color: white;
+    border-radius: 1rem;
+    border: 2px solid black;
+}
